--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   <a href="https://twitter.com/ka_zu_8"><button>@ka_zu_8</button></a>
 </main>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137420614-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137420614-1');
+</script>
+
+
 
 </body>
 </html>
